2000-06-16  Bruno Haible  <haible@clisp.cons.org>

	* libgettext.h (ngettext, dngettext, dcngettext): New
	declarations.
	(dcgettext): Remove macro definition.
	(textdomain, bindtextdomain) [!ENABLE_NLS]: Parenthesize argument.
	* intlh.inst.in (ngettext, dngettext, dcngettext): New
	declarations.
	(dcgettext): Remove macro definition.

	* *.h, *.c, *.y: Change copyright notice from LGPL to GPL.

2000-05-21  Ulrich Drepper  <drepper@redhat.com>

	* dcigettext.c: Fix typo in comment.

2000-05-08  Andreas Jaeger  <aj@suse.de>

	* bindtextdom.c (set_binding_values): Add prototype.

2000-05-06  Bruno Haible  <haible@clisp.cons.org>

	* tst-gettext.c (main): Disable possibly existing LC_CTYPE and
	OUTPUT_CHARSET environment variables.

2000-05-05  Bruno Haible  <haible@clisp.cons.org>

	* dcigettext.c (alignof): New macro.
	(_nl_find_msg): Use it instead of __alignof__. Pass correct output
	buffer length to __gconv/iconv. If malloc (freemem_size) fails, set
	freemem_size to 0.

2000-05-05  Bruno Haible  <haible@clisp.cons.org>

	* dcigettext.c (dcigettext): Fix interpretation of tsearch
	return value.

2000-05-06  Ulrich Drepper  <drepper@redhat.com>

	* dcigettext.c (DCIGETTEXT): Always define local variable `index'.
	(mempcpy): Correct typo in parameter list.

	* hash-string.h: Don't include <values.h>.

	* *.c, *.h, *.y: Update from glibc version.

1998-04-29  Paul Eggert  <eggert@twinsun.com>

	* Makefile.in (aliaspath): Don't put `.' at the end.

1998-06-01  Ulrich Drepper  <drepper@cygnus.com>

	* localealias.c (read_alias_file): Undo last change.
	* l10nflist.c (_nl_normalize_codeset): Likewise.
	* loadinfo.h: Likewise.

1998-05-23  Ulrich Drepper  <drepper@cygnus.com>

	* dcgettext.c: Don't use any alloca hack when C_ALLOCA is defined.

1998-04-29  Ulrich Drepper  <drepper@cygnus.com>

	* intl/localealias.c (read_alias_file): Use unsigned char for
	local variables.  Remove unused variable tp.
	* intl/l10nflist.c (_nl_normalize_codeset): Use unsigned char *